--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ build-backend = "pdm.backend"
 
 [project]
 authors = [
-    {name = "Ramone Agard", email = "agardr@wustl.edu"},
+    {name = "Ramone Agard", email = "rhagard@wustl.edu"},
     {name = "Joey Scanga", email = "joeyscanga92@gmail.com"},
 ]
 requires-python = "<3.13,>=3.10"
@@ -33,9 +33,10 @@ dependencies = [
     "torch<3.0.0,>=2.5.1",
     "torchvision<1.0.0,>=0.20.1",
     "torchaudio<3.0.0,>=2.5.1",
+    "pybids>=0.19.0",
 ]
 name = "oceanproc"
-version = "1.0.0"
+version = "1.1.0"
 description = "MRI preprocessing for WUSTL Ocean labs"
 readme = "README.md"
 
