--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "torchvision<1.0.0,>=0.20.1",
     "torchaudio<3.0.0,>=2.5.1",
     "pybids>=0.16.3",
+    "nipype"
 ]
 name = "oceanproc"
 version = "1.1.4"
@@ -42,7 +43,7 @@ readme = "README.md"
 
 [project.scripts]
 oceanproc = "oceanproc.ocean_proc:main"
-oceanfla = "oceanproc.firstlevel.run_glm:main"
+oceanfla = "oceanproc.firstlevel.run:main"
 
 [dependency-groups]
 dev = [
