--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "torchaudio<3.0.0,>=2.5.1",
     "pybids>=0.16.3",
     "nipype"
+    "niworkflows"
 ]
 name = "oceanproc"
 version = "1.1.4"
